# PaintballKarts

./: README.md
Client/: README.md
Client/pyClient/developer/: developerCanvas.py
PaintballKarts/: CMakeLists.txt  Car.cpp  Car.hpp  Map.cpp  Map.hpp  Simulation.cpp  Simulation.hpp  main.cpp
Server/: CMakeLists.txt
Trys/: README.md
Trys/ColorQueue/Classes/: ColorQueue.cpp  ColorQueue.hpp  Controller.cpp  Controller.hpp  Displayer.cpp  Displayer.hpp  EndGame.cpp  EndGame.hpp  Hilo.cpp  ManiMenu.cpp  ServerScreen.cpp  ServerScreen.hpp  TcpClientScreen.cpp  TcpClientScreen.hpp
Trys/ColorQueue/proj.ios_mac/ios/fr.lproj/: LaunchScreen.storyboard
Trys/Concurrencia/: README.md
Trys/Concurrencia/Calculadora/: calculadora.py  operador.py
Trys/Concurrencia/colorSharer/: cpp_com.py  main.py  ui.py
Trys/GameOfLife/Classes/: Cell.cpp  Cell.hpp  GameOfLife.hpp  Grid.cpp  Grid.hpp  SideMenu.cpp  SideMenu.hpp
Trys/Py->Cpp_Comunication/: README.md  cpp_code.cpp  py_code.py
